change scheduler logic to return ranked elevators