@@ -39,35 +39,79 @@ public class SCANScheduler implements ElevatorScheduler {
                 && elevator.getCurrentFloor() >= request.getFromSrcFloor());
     }
 
+    // Returns a small integer representing direction desirability.
+    // 0: aligned with request direction, 1: idle, 2: opposite.
+    private int directionPriority(Elevator e, ElevatorRequest r) {
+        boolean upReq = r.isUpward();
+        boolean downReq = r.isDownward();
+
+        // 1st choice - same direction alignment
+        if (upReq && e.isMovingUp()) return 0;
+        if (downReq && e.isMovingDown()) return 0;
+
+        // 2nd choice - idle
+        if (e.isStandingIdle()) return 1;
+
+        // 3rd and last choice - opposite direction
+        return 2;
+    }
+
+    /**
+     * Compute an ordered list of candidate elevators for the given request.
+     * This method is intentionally read-only and lock-free; the dispatcher
+     * MUST re-validate suitability after lock acquisition due to potential
+     * state changes (TOCTOU).
+     *
+     * Scoring model (sorted ascending — lower is better):
+     * - abs(distance to pickup src floor)
+     * - directionPriority (aligned → idle → opposite)
+     * - current load (assignedFloors size)
+     * - tie-breaker jitter to reduce herd effects when scores are equal
+     *
+     * Eligibility:
+     * - Elevator must be able to accept the request (e.g., not in maintenance/emergency).
+     * - Request must be valid.
+     *
+     * Fallback policy:
+     * - Opposite-direction elevators are NOT filtered out; they appear later in the list
+     *   to provide deterministic fallback when all aligned/idle options are unavailable.
+     *
+     * @param elevators all current elevators in the system
+     * @param request   the floor/destination request to evaluate
+     * @return ordered list of eligible elevators, possibly empty
+     */
+    @Override
+    public List<Elevator> findBestElevators(List<Elevator> elevators, ElevatorRequest request) {
+        // find working elevator and also filter legitimate/valid requests
+        // filter elevator not in any emergency or other state preventing it from serving valid requests
+        List<Elevator> eligible = elevators.stream()
+            .filter(e -> e.canAcceptFloorServeRequest(request.getFromSrcFloor()))
+            .filter(e -> Validator.isValidRequest(request))
+            .toList();
+
+        // if all elevators are totally restricted(maintainenece/emergency) to serve that floor request
+        if (eligible.isEmpty()) {
+            return List.of();
+        }
+
+        // when the elevators in working state and elevator request is valid/legitimate
+        Comparator<Elevator> cmp =
+            Comparator.comparingInt((Elevator e) -> Math.abs(e.getCurrentFloor() - request.getFromSrcFloor()))
+                      .thenComparingInt(e -> directionPriority(e, request))
+                      .thenComparingInt(Elevator::getNoOfIncomingFloorServeRequest)
+                      // small jitter to avoid stampede; affects only near-equal cases
+                      .thenComparingDouble(e -> java.util.concurrent.ThreadLocalRandom.current().nextDouble());
+
+        return eligible.stream()
+            .sorted(cmp)
+            .toList();
+    }
+
     // Returns Null when no elevator working or request is invalid
     @Override
     public Elevator findBestElevator(List<Elevator> elevators, ElevatorRequest request){
-        // find eligible elevators which can either stay idle or moving in same direction as per request
-        //find working elevator and also filter legitimate/valid requests
-        List<Elevator> eligibleElevators = elevators.stream()
-                                                    .filter(elevator -> {
-//                                                        int targetFloor = (request.getRequestType() == RequestType.FLOOR_DIRECTION_CALL)
-//                                                                ? request.getFromSrcFloor()
-//                                                                : request.getToDestFloor();
-                                                        int targetToBePickedFromSrcFloor = request.getFromSrcFloor();
-//                                                        return elevator.canAcceptFloorServeRequest(request.getToDestFloor());
-                                                        return elevator.canAcceptFloorServeRequest(targetToBePickedFromSrcFloor)
-                                                                && Validator.isValidRequest(request);
-                                                    }) // filter elevator not in any emergency or other state preventing it from serving valid requests
-                                            .toList();
-
-        if(eligibleElevators.isEmpty()){
-            // if all elevators are totally restricted(maintainenece/emergency) to serve that floor request
-            return null;
-        }
-
-        // when the request is valid/legitimate and at least one elevator in working state to serve the request
-        Elevator nearestSuitableElevator  = eligibleElevators.stream().filter(elevator -> this.isElevatorSuitable(elevator, request))// elevator moving in same dir or idle
-                                                    .min(Comparator.comparingInt((Elevator elevator) -> Math.abs(elevator.getCurrentFloor() - request.getFromSrcFloor())) // get min dist elevator
-                                                    .thenComparing(elevator -> elevator.getElevatorState() == ElevatorState.IDLE ? 1 : 0)) // prioritize moving elevators over idle ones if min distance is same as that of same dir moving elevator
-                                                    .orElse(eligibleElevators.get(0)); // fallback(when all working elevators are moving in opposite direction) to first elevator as standby elevator by default if no elevator moving in same dir or any idle elevator found
-
-        return nearestSuitableElevator;
+        List<Elevator> ordered = findBestElevators(elevators, request);
+        return ordered.isEmpty() ? null : ordered.getFirst();
     }
 
     public Map<ElevatorRequest, Elevator> findBestElevator(List<Elevator> elevators, List<ElevatorRequest> requests){
